# paper-scope

./: .env.example  .gitignore  AGENTS.md  Makefile  PLANS.md  README.md
backend/: Dockerfile  __init__.py  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: graphs.py  health.py  ingest.py  papers.py  router.py
backend/app/core/: settings.py
backend/app/schemas/: __init__.py  paper.py
backend/app/services/: __init__.py  downloader.py  ingestion.py  storage.py
backend/app/services/crawlers/: base.py  huggingface.py
backend/app/services/graph/: __init__.py  repository.py
backend/app/services/llm/: base.py  factory.py  mock.py  ollama.py  openai.py  utils.py
backend/app/workers/: scheduler.py
backend/tests/: test_health.py  test_huggingface_crawler.py  test_ingestion.py
frontend/: Dockerfile  app.py  requirements.txt
frontend/components/: __init__.py  chapter_viewer.py  dashboard.py  graphs.py  insights.py  paper_browser.py  pdf_viewer.py
frontend/services/: __init__.py  backend.py  i18n.py
infra/: podman-compose.yml
infra/nginx/: nginx.conf
scripts/: run_ingest.py
